<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="shoeListViewModel"
            type="com.udacity.shoestore.viewmodels.ShoeListViewModel" />
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoe_details_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoe_details"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:text="@string/shoe_name"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/shoe_name"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_details_header" />

        <EditText
            android:id="@+id/shoe_name"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="68dp"
            android:ems="10"
            android:hint="@string/enter_shoe_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={shoeListViewModel.shoe.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/shoe_details_header" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_weight="1"
            android:text="@string/company_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/company_name"
            android:layout_width="223dp"
            android:layout_height="44dp"
            android:layout_marginTop="28dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_company_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={shoeListViewModel.shoe.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shoe_size"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="36dp"
            android:layout_weight="1"
            android:text="@string/shoe_size"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/shoe_size"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/shoe_size"
            android:layout_width="211dp"
            android:layout_height="51dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_shoe_size"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="@={shoeListViewModel.shoe.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shoe_name"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="98dp"
            android:layout_height="38dp"
            android:layout_marginTop="112dp"
            android:text="@string/description"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/description"
            android:layout_width="216dp"
            android:layout_height="119dp"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/enter_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|text"
            android:text="@={shoeListViewModel.shoe.description}"
            app:layout_constraintEnd_toEndOf="@+id/company_name"
            app:layout_constraintStart_toStartOf="@+id/company_name"
            app:layout_constraintTop_toBottomOf="@+id/company_name" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintVertical_bias="0.835" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.856" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
